--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
-                    <p class="profile-title">M.Phil Student, HKUST(GZ)<br>Intern, IDEA</p>
+                    <p class="profile-title">M.Phil. Student, HKUST(GZ)<br>Intern, IDEA</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
@@ -324,11 +324,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>16 citations</span>
+                                                    <span>18 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>330 stars</span>
+                                                    <span>340 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -368,7 +368,7 @@
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>24 stars</span>
+                                                    <span>26 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -404,7 +404,7 @@
                                                 <span>Futian District, Shenzhen, China</span>
                                             </p>
                                             <p class="internship-location">
-                                                <span>Duties: Development of Financial Large Language Models, Model Fine-tuning</span>
+                                                <span>Duties: Development of Financial Large Language Models, Model Fine-tuning, Data Generation</span>
                                             </p>
                                         </div>
                                     </div>
