--- a/pages/records.html
+++ b/pages/records.html
@@ -94,6 +94,27 @@
                             </div>
                         </article>
                     </a>
+                    
+                    <a href="../posts/music2019.html" class="record-link-wrapper">
+                        <article class="record-item" data-categories="life">
+                            <div class="record-date">
+                                <span class="created-date">2025-01-22</span>
+                            </div>
+                            <div class="record-content">
+                                <h3>时光乐章 2019</h3>
+                                <p>Music List for the Year 2019</p>
+                                <div class="record-meta">
+                                    <span class="record-tag life">Life Stories</span>
+                                    <span class="record-link">Read more</span>
+                                    <span class="last-modified">
+                                        <i class="fas fa-history"></i>
+                                        <span class="modified-time"></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+
                     <!-- <a href="../posts/cursor-notes.html" class="record-link-wrapper">
                         <article class="record-item" data-categories="research">
                             <div class="record-date">
