Update index.html: Refine profile details, internship info, and location descriptions
- Add email contact in profile section
- Remove redundant email link
- Update university and location names for consistency
- Add IDEA internship details
- Correct minor typos and punctuation
- Enhance location descriptions with province names

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
                     <p class="profile-title">M.Phil. Student, HKUST(GZ)<br>Intern, IDEA</p>
+                    <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
@@ -66,10 +67,6 @@
                         <a href="https://steamcommunity.com/id/MPX0222" class="link-item">
                             <i class="fab fa-steam"></i>
                             <span>Steam</span>
-                        </a>
-                        <a href="mpx0222@qq.com" class="link-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>Email</span>
                         </a>
                     </div>
                     <div class="cv-links">
@@ -96,7 +93,7 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
                         <div class="card-content">
-                            <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology GuangZhou (HKUSTGZ)</a>. 
+                            <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
                                 Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
                                 under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
                                 at the <a href="https://www.hkust-gz.edu.cn/zh/academics/?variant=zh-cn">Information Hub (INFH)</a>.
@@ -106,9 +103,10 @@
                                 My undergraduate research direction is the optimization and application of the Broad Learning System (BLS). 
                                 Before my graduation, I received the offer from HKUST(GZ) and successflily enrolled in it in the Fall 2023.
                                 <br><br>
-                                Currently, I participate in HKUST(GZ) Data Intelligence and Analytics Lab <a href="https://github.com/HKUSTDial">@HKUST(GZ)-DIAL 呆鹅实验室</a> 
-                                and Red Bird AI Agent Narrative Storytelling Game Groups <a href="https://github.com/HKUSTAASG">@AASG</a>. 
-                                My research interest comprises Database Management (DBMS), Mliti-agent System (MAS), Natural Language to SQL (NL2SQL) and Open-Source BLS. </p>
+                                Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 呆鹅实验室</a> 
+                                and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy @IDEA 粤港澳大湾区数字经济研究院</a>. 
+                                My research interest comprises Database Management (DBMS), Muiti-agent System (MAS), Natural Language to SQL (NL2SQL) and Open-Source BLS. </p>
+
                         </div>
                     </div>
 
@@ -155,13 +153,13 @@
                                 <div class="news-item">
                                     <div class="news-date">Sep 2023</div>
                                     <div class="news-content">
-                                        <p>Start Research Postgraduate Program in The Hong Kong University of Science and Technology (GuangZhou).</p>
+                                        <p>Start Research Postgraduate Program in The Hong Kong University of Science and Technology (Guangzhou).</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
                                     <div class="news-date">Jul 2023</div>
                                     <div class="news-content">
-                                        <p>Receive offers from The Hong Kong University of Science and Technology (GuangZhou) and The Chinese University of Hong Kong (ShenZhen).</p>
+                                        <p>Receive offers from The Hong Kong University of Science and Technology (Guangzhou) and The Chinese University of Hong Kong (ShenZhen).</p>
                                         <p>First Long Research Paper: 
                                             <a href="https://www.frontiersin.org/articles/10.3389/fnins.2023.1137557/full">
                                                 Development and Validation of a Deep-broad Ensemble Model for Early Detection of Alzheimer’s Disease</a> 
@@ -295,7 +293,7 @@
                                     </div>
                                     <div class="publication-info">
                                         <h3 class="publication-title">
-                                            A Survey of NL2SQL with Large Language Models: Where are we, and where are we going
+                                            A Survey of NL2SQL with Large Language Models: Where are we, and where are we going?
                                             <span class="publication-year">(2024)</span>
                                         </h3>
                                         <p class="publication-authors">
@@ -401,7 +399,7 @@
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Futian District, Shenzhen, China</span>
+                                                <span>Futian District, Shenzhen, Guangdong Province, China</span>
                                             </p>
                                             <p class="internship-location">
                                                 <span>Duties: Development of Financial Large Language Models, Model Fine-tuning, Data Generation</span>
@@ -423,7 +421,7 @@
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Panyu District, Guangzhou, China</span>
+                                                <span>Panyu District, Guangzhou, Guangdong Province, China</span>
                                             </p>
                                             <p class="internship-location">
                                                 <span>Duties: Data Mining, Data Analysis, Data Visualization</span>
@@ -453,7 +451,7 @@
                                                     <h4 class="award-name">Red Bird Postgraduate Scholarship</h4>
                                                     <span class="award-tag scholarship">Scholarship</span>
                                                 </div>
-                                                <p class="award-org">The Hong Kong University of Science and Technology (GuangZhou)</p>
+                                                <p class="award-org">The Hong Kong University of Science and Technology (Guangzhou)</p>
                                             </div>
                                         </div>
                                     </div>
@@ -467,7 +465,7 @@
                                                     <h4 class="award-name">Red Bird Postgraduate Scholarship</h4>
                                                     <span class="award-tag scholarship">Scholarship</span>
                                                 </div>
-                                                <p class="award-org">The Hong Kong University of Science and Technology (GuangZhou)</p>
+                                                <p class="award-org">The Hong Kong University of Science and Technology (Guangzhou)</p>
                                             </div>
                                             <div class="award-info">
                                                 <div class="award-header">
