--- a/index.html
+++ b/index.html
@@ -763,6 +763,9 @@
             </blockquote>
             <i class="fas fa-quote-right quote-icon"></i>
         </div>
+        <div class="quote-container">
+            <p class="quote-text"><br>© 2025 Peixian MA. All rights reserved.</p>
+        </div>
     </footer>
 
     <div class="section-nav">
