Fix typo in enrollment description
- Correct spelling of "successflly" to "successfully" in personal profile section
- Minor text refinement in academic background description

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
                                 During my undergraduate live, I started my research by working as the undergraduate research assistant in the Data-driven Intelligent Systems Laboratory of Jinan University. 
                                 My undergraduate research direction is the optimization and application of the Broad Learning System (BLS). 
-                                Before my graduation, I received the offer from HKUST(GZ) and successflily enrolled in it in the Fall 2023.
+                                Before my graduation, I received the offer from HKUST(GZ) and successflly enrolled in it in the Fall 2023.
                                 <br><br>
                                 Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 呆鹅实验室</a> 
                                 and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy @IDEA 粤港澳大湾区数字经济研究院</a>. 
