--- a/index.html
+++ b/index.html
@@ -157,15 +157,22 @@
                         </a>
                     </div>
                     <div class="cv-links">
-                        <a href="files/cv/CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
-                            <i class="fas fa-file-pdf"></i>
+                        <a href="assets/cv/CV_en.pdf" class="cv-link">
+                            <i class="fas fa-file-alt"></i>
                             <span>CV_en</span>
                         </a>
-                        <a href="files/cv/CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
+                        <a href="assets/cv/CV_zh.pdf" class="cv-link">
                             <i class="fas fa-file-alt"></i>
                             <span>CV_zh</span>
                         </a>
                     </div>
+                </div>
+                
+                <!-- 添加访问统计地图 -->
+                <div class="visitor-map">
+                    <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
+                        <img src="//clustrmaps.com/map_v2.png?d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=ffffff&w=500" alt="Visitor Map" />
+                    </a>
                 </div>
             </div>
 
@@ -209,7 +216,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Jan 2025</div>
                                     <div class="news-content">
-                                        <p>Start a new internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
+                                        <p>Receive Intern offer and start internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
