--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                                 My undergraduate research direction is the optimization and application of the Broad Learning System (BLS). 
                                 Before my graduation, I received the offer from HKUST(GZ) and successflly enrolled in it in the Fall 2023.
                                 <br><br>
-                                Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 呆鹅实验室</a> 
-                                and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy @IDEA 粤港澳大湾区数字经济研究院</a>. 
+                                Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a> 
+                                and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
                                 My research interest comprises Database Management (DBMS), Muiti-agent System (MAS), Natural Language to SQL (NL2SQL) and Open-Source BLS. </p>
 
                         </div>
