--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Dec 2024</div>
                                     <div class="news-content">
-                                        <p>Successfully pass the Mid-term Group Project Defense of the Red Bird M.Phil Program.</p>
+                                        <p>Successfully pass the Mid-term Group Project Defense of the HKUST(GZ) Red Bird M.Phil Program.</p>
                                         <p>Long Research Paper: <a href="https://arxiv.org/pdf/2412.17068">
                                             A Plug-and-Play Natural Language Rewriter for Natural Language to SQL</a> 
                                             is available on Arxiv.</p>
@@ -241,7 +241,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Jan 2024</div>
                                     <div class="news-content">
-                                        <p>Successfully pass the Postgraduate Qualifying Assessment of the Red Bird M.Phil Program.</p>
+                                        <p>Successfully pass the Postgraduate Qualifying Assessment of the HKUST(GZ) Red Bird M.Phil Program.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
@@ -253,7 +253,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Jul 2023</div>
                                     <div class="news-content">
-                                        <p>Receive offers from The Hong Kong University of Science and Technology (Guangzhou) and The Chinese University of Hong Kong (ShenZhen).</p>
+                                        <p>Receive Postgraduate Program offers from The Hong Kong University of Science and Technology (Guangzhou) and The Chinese University of Hong Kong (ShenZhen).</p>
                                         <p>First Long Research Paper: 
                                             <a href="https://www.frontiersin.org/articles/10.3389/fnins.2023.1137557/full">
                                                 Development and Validation of a Deep-broad Ensemble Model for Early Detection of Alzheimer's Disease</a> 
@@ -263,7 +263,7 @@
                                 <div class="news-item">
                                     <div class="news-date">May 2023</div>
                                     <div class="news-content">
-                                        Successfully pass the undergraduate graduation defense in Jinan University.
+                                        Successfully pass the Undergraduate Thesis Defense in Jinan University.
                                     </div>
                                 </div>
                             </div>
@@ -485,7 +485,7 @@
                                     </div>
                                     <div class="internship-info">
                                         <h3 class="company-name">International Digital Economy Academy (IDEA)</h3>
-                                        <p class="position">Intern for Large Language Model Development, FinAI Lab </p>
+                                        <p class="position">Intern for Large Language Model Engineering, FinAI Lab </p>
                                         <div class="internship-meta">
                                             <p class="internship-period">
                                                 <i class="far fa-calendar-alt"></i>
@@ -493,10 +493,10 @@
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Futian District, Shenzhen, Guangdong Province, China</span>
+                                                <span>Futian Bonded Area, Futian District, Shenzhen, China</span>
                                             </p>
                                             <p class="internship-location">
-                                                <span>Duties: Development of Financial Large Language Models, Model Fine-tuning, Data Generation</span>
+                                                <span>Duties: Development of Financial Large Language Models, Model Post-training, Reinforcement Data Generation</span>
                                             </p>
                                         </div>
                                     </div>
@@ -515,10 +515,10 @@
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Panyu District, Guangzhou, Guangdong Province, China</span>
+                                                <span>Xinzao Town, Panyu District, Guangzhou, China</span>
                                             </p>
                                             <p class="internship-location">
-                                                <span>Duties: Data Mining, Data Analysis, Data Visualization</span>
+                                                <span>Duties: Data Mining, Data Analysis, Data Visualization for News Analysis</span>
                                             </p>
                                         </div>
                                     </div>
