--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Jan 2025</div>
                                     <div class="news-content">
-                                        <p>Receive Intern offer and start internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
+                                        <p>Receive Intern Program offer and start internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
@@ -329,11 +329,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>18 citations</span>
+                                                    <span>19 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>340 stars</span>
+                                                    <span>355 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -398,7 +398,7 @@
                                     </div>
                                     <div class="internship-info">
                                         <h3 class="company-name">International Digital Economy Academy (IDEA)</h3>
-                                        <p class="position">Intern for Large Language Model Engineering, FinAI Lab </p>
+                                        <p class="position">Intern for Large Language Model Engineering, FinAI Lab</p>
                                         <div class="internship-meta">
                                             <p class="internship-period">
                                                 <i class="far fa-calendar-alt"></i>
@@ -409,7 +409,7 @@
                                                 <span>Futian Bonded Area, Futian District, Shenzhen, China</span>
                                             </p>
                                             <p class="internship-location">
-                                                <span>Duties: Development of Financial Large Language Models, Model Post-training, Reinforcement Data Generation</span>
+                                                <span>Job Duties: Development of Financial Large Language Models, Model Post-training, Reinforcement Data Generation</span>
                                             </p>
                                         </div>
                                     </div>
@@ -431,7 +431,7 @@
                                                 <span>Xinzao Town, Panyu District, Guangzhou, China</span>
                                             </p>
                                             <p class="internship-location">
-                                                <span>Duties: Data Mining, Data Analysis, Data Visualization for News Analysis</span>
+                                                <span>Job Duties: Data Mining, Data Analysis, Data Visualization for News Analysis</span>
                                             </p>
                                         </div>
                                     </div>
