--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Jul 2023</div>
                                     <div class="news-content">
-                                        <p>Receive Postgraduate Program offers from The Hong Kong University of Science and Technology (Guangzhou) and The Chinese University of Hong Kong (ShenZhen).</p>
+                                        <p>Receive Postgraduate Program offers from The Hong Kong University of Science and Technology (Guangzhou) and The Chinese University of Hong Kong (Shenzhen).</p>
                                         <p>First Long Research Paper: 
                                             <a href="https://www.frontiersin.org/articles/10.3389/fnins.2023.1137557/full">
                                                 Development and Validation of a Deep-broad Ensemble Model for Early Detection of Alzheimer's Disease</a> 
@@ -398,7 +398,7 @@
                                     </div>
                                     <div class="internship-info">
                                         <h3 class="company-name">International Digital Economy Academy (IDEA)</h3>
-                                        <p class="position">Intern for Large Language Model Engineering, FinAI Lab</p>
+                                        <p class="position">Intern for Large Language Model Engineering, FinAI Lab, FinKG Group</p>
                                         <div class="internship-meta">
                                             <p class="internship-period">
                                                 <i class="far fa-calendar-alt"></i>
