--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://steamcommunity.com/id/MPX0222" class="link-item">
-                            <i class="fab fa-steam"></i>
-                            <span>Steam</span>
+                        <a href="https://gitlab.com/mpx0222" class="link-item">
+                            <i class="fab fa-gitlab"></i>
+                            <span>GitLab</span>
                         </a>
                     </div>
                     <div class="cv-links">
