--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>19 citations</span>
+                                                    <span>22 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>355 stars</span>
+                                                    <span>370 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -373,7 +373,7 @@
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>26 stars</span>
+                                                    <span>27 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -428,7 +428,7 @@
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Xinzao Town, Panyu District, Guangzhou, China</span>
+                                                <span>Higher Education Mega Center, Panyu District, Guangzhou, China</span>
                                             </p>
                                             <p class="internship-location">
                                                 <span>Job Duties: Data Mining, Data Analysis, Data Visualization for News Analysis</span>
