--- a/pages/records.html
+++ b/pages/records.html
@@ -75,6 +75,27 @@
                 
                 <div class="records-list">
                     <!-- 示例记录项 -->
+                    <a href="../posts/road.html" class="record-link-wrapper">
+                        <article class="record-item" data-categories="life">
+                            <div class="record-date">
+                                <span class="created-date">2025-02-21</span>
+                            </div>
+                            <div class="record-content">
+                                <h3>行走地图</h3>
+                                <p>Road</p>
+                                <div class="record-meta">
+                                    <span class="record-tag life">Life Stories</span>
+                                    <span class="record-link">Read more</span>
+                                    <span class="last-modified">
+                                        <i class="fas fa-history"></i>
+                                        <span class="modified-time"></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+
+                    <!-- 时光乐章 2024 -->
                     <a href="../posts/music2024.html" class="record-link-wrapper">
                         <article class="record-item" data-categories="life">
                             <div class="record-date">
