--- a/index.html
+++ b/index.html
@@ -11,29 +11,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="../js/components/Navbar.js"></script>
 </head>
 <body>
     <!-- 添加导航栏 -->
-    <nav class="navbar">
-        <div class="nav-content">
-            <div class="nav-left">
-                <a href="https://mpx0222.github.io/" class="nav-brand">Academic Profile</a>
-                <span class="version">Version 3.2</span>
-            </div>
-            <div class="nav-right">
-                <a href="#about">About</a>
-                <a href="#news">News</a>
-                <a href="#education">Education</a>
-                <a href="#publications">Publications</a>
-                <a href="#internship">Internship</a>
-                <a href="#awards">Awards</a>
-                <a href="#projects">Projects</a>
-                <a href="#services">Services</a>
-                <a href="pages/records.html" class="nav-records">Records</a>
-                <a href="https://mpx0222.github.io/" class="nav-contact">Contact</a>
-            </div>
-        </div>
-    </nav>
+    <nav-bar></nav-bar>
 
     <!-- 主要内容容器 -->
     <main class="main-content">
@@ -333,7 +315,7 @@
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>390 stars</span>
+                                                    <span>400 stars</span>
                                                 </span>
                                             </div>
                                         </div>
